fix: navbar on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -93,11 +93,12 @@ nav {
 	}
 }
 
-@media (width < 400px) {
-	nav {
-		flex-direction: column;
-	}
-}
+// We do not have enough links for this to make sense
+// @media (width < 400px) {
+// 	nav {
+// 		flex-direction: column;
+// 	}
+// }
 
 main {
 	display: flex;
